--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 git+https://github.com/adbar/courlan.git#egg=courlan
-openpyxl>=3.0.0
-pandas==1.3.3
+pandas
+openpyxl
 streamlit==1.14.0
 urllib3>=1.26.0,<2.0.0
 altair==4.2.0
-numpy
+numpy<=2.0
